# esp32

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Kconfig.projbuild  __component_requires.cmake  component_requires.temp.cmake  idf.cmake  led.h  led_c_panel.c  main.c  main.cpp  panel.h  panel_c.c
buildroot/: .editorconfig  .gitignore  CMakeLists.txt  cmake_idf  idf.cmake
buildroot/app_update/: CMakeLists.txt
buildroot/bootloader/: CMakeLists.txt  bootloader_log.c  entry.c  project_include.cmake  startup.c
buildroot/bootloader/esp32s3/: bootloader.ld  entry.c  esp32s3_startup.c  startup.c
buildroot/bootloader/include/: esp_log.h
buildroot/bootloader/ld/: esp32s3.ld
buildroot/bootloader_support/: CMakeLists.txt  Kconfig
buildroot/esp_app_format/: CMakeLists.txt
buildroot/esp_common/: CMakeLists.txt  log.c
buildroot/esp_hw_support/: CMakeLists.txt  Kconfig
buildroot/esp_system/: CMakeLists.txt  ESP_system.c  ESP_system_startup.c  Kconfig  bootloader_start.c  flash_code_test.c  init.c  libc_retarget.c  log.c  startup.c
buildroot/esp_system/esp32s3/: init.c  memory.ld.in
buildroot/esp_system/include/: esp_compiler.h  esp_newlib.h  features.h
buildroot/esp_system/ld/: bootloader.ld  esp32s3.ld  esp32s3.memap.ld  esp32s3.memap.ld.in  esp32s3.sections.ld  esp32s3_memap.ld.in  esp32s3_sections copy.ld  esp32s3_sections.ld
buildroot/esp_system/ld copy/: esp32s3_memap.ld.in
buildroot/esptool_py/: CMakeLists.txt  Kconfig.projbuild
buildroot/freertos/: CMakeLists.txt  Kconfig
buildroot/log/: CMakeLists.txt
buildroot/micro-ecc/: CMakeLists.txt
buildroot/obsoleted/app_update/: CMakeLists.txt
buildroot/obsoleted/partition_table/: CMakeLists.txt  project_include.cmake
buildroot/partition_table/: CMakeLists.txt
buildroot/soc/: CMakeLists.txt
buildroot/spi_flash/: CMakeLists.txt
cmake/: Kconfig  (+2 more)
driver/: CMakeLists.txt  Kconfig.projbuild  common_gpio.c  common_pwm.c  common_rtc.c  common_timer.c
driver/esp32s3/: .cmake  Kconfig.cache  Kconfig.cpu  efuse.c  gpio.c  i2c.c  rtc.c  true-rng.c  uart.c
driver/esp32s3/include/: clk-tree_defs.h  efuse.h  gpio.h  phy.h  rtc-cntl.h  sar-adc.h  systimer.h
driver/esp32s3/ld/: sections.ld
driver/include/hw/: adc.h  clk-tree.h  gpio.h  i2c.h  pmu.h  pwm.h  rtc.h  spi.h  timer.h  usb.h
esp_common/: CMakeLists.txt  Kconfig.projbuild  bootloader_support_shim.c  err.c  esp_crosscore_int.c  esp_err.c  esp_platform.c  glist.c  log.c
esp_common/include/: esp_arch.h  esp_assert.h  esp_attr.h  esp_bit_defs.h  esp_check.h  esp_compiler.h  esp_err.h  esp_idf_version.h  esp_log.h  esp_macros.h  esp_newlib.h  esp_random.h  esp_system.h  esp_task.h
esp_common/include/bootloader_support/: bootloader_flash.h  esp_app_format.h  esp_flash_partitions.h
esp_common/include/dummy/: bootloader_flash_priv.h  (+2 more)
esp_common/newlib_retarget/: _exit.c  _init.c  err.c  locks.c  os_sleeps.c  random.c  sched.c  stdatomic.c
esp_common/posix/: _redirect.c  assert.h  dirent.h  endian.h  features.h  heap.c  mqueue.h  pthread.c  pthread.h  random.c  semaphore.h  signal.c  spinlock.h  stropts.h  unistd.c  unistd.h
esp_hw_support/: CMakeLists.txt  Kconfig  adc_share_hw_ctrl.c  clk_ctrl_os.c  esp_clk.c  intr_alloc.c  mac_addr.c  periph_ctrl.c  regi2c_ctrl.c  rtc_module.c  sleep_mac_bb.c
esp_hw_support/include/: clk_tree.h  esp_mac.h  esp_memprot.h
esp_phy/: CMakeLists.txt  Kconfig
esp_phy/esp32s3/: phy_multiple_init_data.c
esp_phy/include/: esp_phy_init.h
esp_phy/src/: btbb_init.c  phy_init.c
esp_system/: CMakeLists.txt  Kconfig  Kconfig.projbuild  esp_cpu.c  esp_crosscore_int.c  esp_dbg_ubsan.c  esp_freertos_hooks.c  esp_freertos_impl.c  esp_freertos_startup.c  esp_intr.c  esp_log.c  esp_platform.c  esp_platform_misc.c  esp_startup.c  esp_system.c  esp_system_init.c  glist.c  memap.lf  panic.c  panic_handler.c
esp_system/driver/: .cmake  common_gpio.c  common_rtc.c  common_timer.c  esp_cpu.c  esp_intr.c
esp_system/esp32s3/: .cmake  CMakeLists.txt  Kconfig.cache  Kconfig.tracemem  clk.c  clk_tree.c  init.c  memory.ld.in  reset_reason.c  sections.ld  startup.c  system_init.c  systimer.c  uart.c
esp_system/freertos_port/: .cmake  esp_freertos_hooks.c  esp_freertos_startup.c
esp_system/include/: bootloader_clock.h  esp_attr.h  esp_compiler.h  esp_cpu.h  esp_debug_helpers.h  esp_ds.h  esp_ds_err.h  esp_err.h  esp_fault.h  esp_freertos_hooks.h  esp_hmac.h  esp_intr_alloc.h  esp_ipc.h  esp_log.h  esp_memory_utils.h  esp_newlib.h  esp_pm.h  esp_random.h  esp_system.h  esp_task.h
esp_system/newlib_retarget/: Kconfig  __realpath.c  heap.c  newlib_init.c  os_sleeps.c  random.c  realpath.c  stdatomic.c  syscalls.c  time.c
esp_system/posix/: .cmake  _init.c  _retarget.c  _retarget_init.c  _retarget_lock.c  _retarget_syscall.c  _rtos_freertos_impl.c  _rtos_kernel.c  err.c  esp_time_impl.c  esp_time_impl.h  filesystem.c  heap.c  io.c  locks.c  mqueue.c  poll.c  pseudo-rng.c  pthread.c  pthread_local_storage.c  pthread_spinlock.c  random.c  sched.c  semaphore.c  signal.c  strerror.c  time.c  unistd.c
esp_system/shell/: cmdline.c  repo.c  rtos-shell.c
esp_system/shim/: .cmake  bootloader_support_shim.c
esp_system/ultracore/: .cmake  _init.c  atomic.c  filesystem.c  glist.c  io.c  kernel.c
esptool_py/: CMakeLists.txt  Kconfig.projbuild
freertos/: CMakeLists.txt  Kconfig.projbuild  esp_freertos_hooks.c  esp_ringbuf.c  port_common.c
freertos/include/: FreeRTOSConfig.h  esp_freertos_hooks.h  esp_newlib.h  freertos  idf_additions.h  ringbuf.h
freertos/kernel-smp/: tasks.c  timers.c
freertos/port_xtensa/: port.c  xtensa_loadstore_handler.S
freertos/private_include/: esp_task.h  freertos_tasks_c_additions.h  systimer.h
freertos/xtensa/: port.c  portasm.S  xt_asm_utils.h  xtensa_context.S  xtensa_vectors.S
shell/: CMakeLists.txt  cmdline.c  ucsh.c
shell/impl/: cat.c  chdir.c  dt.c  format.c  ls.c  mkdir.c  nvm.c  pwd.c  rmdir.c  rst.c  unlink.c
xtensa/: CMakeLists.txt  eri.c  xt_trax.c  xtensa_intr.c  xtensa_intr_asm.S
xtensa/include/: xt_instr_macros.h  xt_trax.h  xt_utils.h  xtensa-debug-module.h
(+234 files in other folders)
